# OpenRTX

./: .gitignore  README.md  meson.build
.devcontainer/: Dockerfile
.github/workflows/: build-devcontainer.yml  main.yml
libopenrtx/: Makefile  meson.build
libopenrtx/include/: libopenrtx.h  libopenrtx_audio.h
libopenrtx/src/: channel.c  control.c  init.c  state.c  state.h
libopenrtx/src/audio/: codec.c
libopenrtx/tests/: test_basic.c
openrtx-ui/: Cargo.toml  build.rs
openrtx-ui/src/: ffi.rs  main.rs
openrtx-ui/src/ui/: app.rs  channel_list.rs  mod.rs  ptt_button.rs  vfo.rs
openrtx/openrtx/src/ui/default/: ui_menu.c
openrtx/platform/drivers/ADC/: adc_at32.h
openrtx/platform/drivers/GPIO/: gpio_at32f423.h
openrtx/platform/drivers/NVM/: W25Qx.c  flash_stm32f4.c  flash_stm32h7.c  posix_file.h
openrtx/platform/mcu/AT32F423/: linker_script.ld
openrtx/platform/mcu/AT32F423/drivers/: delays.cpp
openrtx/platform/mcu/CMSIS/Device/Artery/AT32F423/Include/: at32f423.h  at32f423_acc.h  at32f423_adc.h  at32f423_can.h  at32f423_crc.h  at32f423_crm.h  at32f423_dac.h  at32f423_def.h  at32f423_ertc.h  at32f423_flash.h  at32f423_i2c.h  at32f423_pwc.h  at32f423_scfg.h  at32f423_tmr.h  at32f423_usart.h  at32f423_wwdt.h
openrtx/platform/mcu/STM32F4xx/drivers/: i2c_stm32.c
openrtx/scripts/: clang_format.sh
openrtx/src/ui/default/: ui.c
platform/drivers/ADC/: adc_at32.c
platform/drivers/GPIO/: gpio_at32f423.c
platform/drivers/NVM/: nvmem_settings_MDx.c  posix_file.c
platform/drivers/audio/: baseband_esp32.c  baseband_esp32.c.orig  baseband_esp32.h  file_source.c
platform/drivers/baseband/: SA8x8.c  SA8x8.h
platform/mcu/AT32F423/boot/: bsp.cpp
platform/mcu/AT32F423/drivers/: USART6.cpp  USART6.h
platform/mcu/CMSIS/Device/Artery/AT32F423/Include/: at32f423_conf.h  at32f423_debug.h  at32f423_dma.h  at32f423_exint.h  at32f423_gpio.h  at32f423_misc.h  at32f423_spi.h  at32f423_usb.h  at32f423_wdt.h  at32f423_xmc.h  system_at32f423.h
platform/mcu/CMSIS/Device/Artery/AT32F423/Source/: system_at32f423.c
platform/mcu/ESP32S3/: zephyr.conf
platform/mcu/STM32F4xx/drivers/: i2c_stm32.c  i2c_stm32.h
platform/targets/ttwr21/: CMakeLists.txt  platform.c.bak  ttwr21_procpu.dts.i2s_backup
